infrastructure/configs/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare 
  name: capacitor
  namespace: flux-system 
spec:
  tls:
    - hosts:
      - capacitor.flux.techbabette.com
      secretName: capacitor-cert
  rules:
  - host: capacitor.flux.techbabette.com
    http:
      paths:
      - backend:
          service:
            name: capacitor 
            port:
              number: 9000 
        path: /
        pathType: Prefix
